{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerView",
            "id": "98bd7db0-909d-47eb-b3b3-1391216cc2e6",
            "actions": [
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "bf1a3a22-ffbd-4e24-94bf-6b389c73ddb4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "18afdd53-1b68-4ed0-88a1-478924b04ede",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SteerTest",
                    "type": "Button",
                    "id": "1c3feecd-e084-4e94-93f2-15df99de0cba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "83816b69-93b0-4d4a-a968-08837168fbf8",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8750410-212b-4203-b88f-083e08cd534b",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "813a9515-1130-4991-b0ad-b672a0c721e4",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SteerTest",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SteeringView",
            "id": "0347baa0-3295-436a-8ae4-c752517820ae",
            "actions": [
                {
                    "name": "SteerTurnLeftRight",
                    "type": "PassThrough",
                    "id": "8e607c43-77ab-415d-a876-7dafe7c4cf23",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "e6ca4a21-d12c-4625-b95b-890d0604807e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SteerTurnLeftRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "bfce0f32-30a8-40ba-bd3e-41090f7b55a9",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SteerTurnLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "13ecb59f-18ae-4a71-ab4c-aa467f7ed39b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SteerTurnLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Gamepad/Mobile",
                    "id": "e3d71f24-dfd2-4ffb-8cdc-432c8297cf1e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SteerTurnLeftRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b5a841c7-85e0-4338-acb1-0ad89ffa296e",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SteerTurnLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "c1c19426-d27a-415d-8a6d-506e6c33349e",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SteerTurnLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "WeaponView",
            "id": "33cb8946-9e2c-4a06-be4d-72c3f6a6d287",
            "actions": [
                {
                    "name": "WeaponTurnLeftRight",
                    "type": "PassThrough",
                    "id": "03c70e70-864c-4bcf-bfbe-295eeebcaa93",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire",
                    "type": "PassThrough",
                    "id": "81118847-c8ed-4776-8c7f-a682635e328f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleAutoFire",
                    "type": "Button",
                    "id": "47d37ad3-c695-4dcc-bab6-b4d2701fc712",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "31216590-22b1-42f7-b664-78b1499bbdbd",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponTurnLeftRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "0aa9732e-c87a-4044-a4c7-91a77bed1620",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponTurnLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "0afcfbf7-b4ac-4560-a209-7c9cdfb7260c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponTurnLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Gamepad/Mobile",
                    "id": "363c3faa-f1d7-426e-94c0-e43526972b67",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponTurnLeftRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "31ae19cf-3c3e-40ea-adb0-04937fdf0fad",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponTurnLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "92f09258-2133-44ae-a991-27c06ed55dbc",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponTurnLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0e2933dc-2a7b-4cf5-a87d-6b933e3f4e41",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24778aa4-a61d-4854-93a5-3c5af133b7f6",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleAutoFire",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "AlwaysOn",
            "id": "6c3879f4-fc15-49e7-9746-e952e7c59956",
            "actions": [
                {
                    "name": "ExitUI",
                    "type": "Button",
                    "id": "ab9b512e-9793-4f61-a191-f18345b91ad2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "55831843-3a54-472b-a9c8-8e7102d273c9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8baa5e0f-605a-42cb-a386-30095ab03b43",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExitUI",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c05f5f6f-5a5e-4e22-a695-d6c20ba99f1b",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "f2de5331-5464-4672-9fb8-075a7ef1ccd7",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c279a0a2-7507-4ca4-b4cc-fdf7e28312f8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "01c9350b-b9d3-4ad3-858d-d52ffa6b9948",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "cf29e1ec-25ee-4b96-96a9-37a170a8e068",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "acf8d579-646b-451f-a49e-1724e61b044d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}